@@ -28,7 +28,7 @@ Build-Depends:
  libunistring-dev,
  libverto-dev,
  libxmlrpc-core-c3-dev (>= 1.33.06),
- nodejs,
+ nodejs [amd64 arm64 armhf i386 mips mips64el mipsel ppc64 ppc64el s390x],
  node-uglify,
  pki-base (>= 10.6.0~),
  python-all-dev,
