@@ -3,6 +3,8 @@ freeipa (4.7.1-3) UNRELEASED; urgency=medium
   * control: Replace libsvrcore-dev build-dep with 389-ds-base-dev.
   * tests: Install only the packages which are used for testing.
   * rules: Don't run git on clean. (Closes: #912202)
+  * control: Nodejs is not available on all archs, build server packages
+    only where it is.
 
  -- Timo Aaltonen <tjaalton@debian.org>  Thu, 06 Dec 2018 01:29:22 +0200
 
